tests/ui/concurrent_cached_self_method.stderr
error: #[concurrent_cached] cannot be applied to methods that take `self`
 --> tests/ui/concurrent_cached_self_method.rs:4:4
  |
4 | fn my_fn(&self, k: i32) -> Result<i32, String> {
  |    ^^^^^
